// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > N8nActionDropdown > should render custom styling correctly 1`] = `
"<div class="action-dropdown-container actionDropdownContainer">
  <MNI-icon-button-stub variant="ghost" icon="ellipsis" size="medium" loading="false" icononly="true" disabled="false" class="trigger activator" id="reka-dropdown-menu-trigger-v-1" type="button" aria-haspopup="menu" aria-expanded="false" aria-controls="MNI-action-dropdown-21" data-state="closed" aria-label="Actions"></MNI-icon-button-stub>
  <!--v-if-->
</div>"
`;

exports[`components > N8nActionDropdown > should render default styling correctly 1`] = `
"<div class="action-dropdown-container actionDropdownContainer">
  <MNI-icon-button-stub variant="ghost" icon="ellipsis" size="medium" loading="false" icononly="true" disabled="false" class="trigger activator" id="reka-dropdown-menu-trigger-v-1" type="button" aria-haspopup="menu" aria-expanded="false" aria-controls="MNI-action-dropdown-1" data-state="closed" aria-label="Actions"></MNI-icon-button-stub>
  <!--v-if-->
</div>"
`;
